--- a/pages/MirayEscucha.html
+++ b/pages/MirayEscucha.html
@@ -6,6 +6,8 @@
     <meta name="title" content="No quiero que te vayas"/>
     <meta name="description" content="pagina de orientacion sobre prevencion del suicidio"/>  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <link href="../css/fondo_menu.css" rel="stylesheet" type="text/css"/>
     <title> No quiero que te vayas</title>   
 </head>        
@@ -79,7 +81,7 @@
                 </p>
             </div>
             <iframe width="1000" height="315" src="https://www.youtube.com/embed/dn2z19QnEfQ" title="Queen - Don't Try Suicide (Official Lyric Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script> 
     </body>
     </head>
 </html>
