--- a/pages/NoEstasSolo.html
+++ b/pages/NoEstasSolo.html
@@ -7,6 +7,8 @@
         <meta name="description" content="pagina de orientacion sobre prevencion
         del suicidio"/>   
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
         <link href="../css/fondo_menu.css" rel="stylesheet" type="text/css"/>
       </head>     
 <body id="NoEstasSolo">
@@ -49,7 +51,7 @@
     
 </main>
 <body>
-    <div class="cerebro"><img src="../imagenes/bannercerebro.jpg"></div>
+    <img src="../imagenes/bannercerebro.jpg" class="img-fluid" alt="...">
     
     <p>DOPAMINA:Para tener más dopamina en tu vida:
 
@@ -121,5 +123,6 @@
          </p>
 
          <footer>Nuestras redes de contacto: No quiero que te vayas-facebook- Noquieroquetevayas@gmail.com</footer>  
+         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
