--- a/pages/PersonasQueInspiran.html
+++ b/pages/PersonasQueInspiran.html
@@ -7,8 +7,9 @@
     <meta name="title" content="No quiero que te vayas"/>
     <meta name="description" content="pagina de orientacion sobre prevencion del suicidio"/>   
     <meta name="viewport" content="width-device-width, initial-scale=1.0"/> 
-    <link href="../css/fondo_menu.css" rel="stylesheet" type="text/css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/fondo_menu.css" media="screen"/>
+    <link href="../css/fondo_menu.css" rel="stylesheet" type="text/css"/>
 </head>    
 
 <body id="personas">
@@ -102,6 +103,8 @@
         En su nombre lleva la gloria, Cielo es una de las pocas jóvenes que puede decir que ha superado casi por completo la anorexia.</p>
     
        <footer>Nuestras redes de contacto: No quiero que te vayas-facebook- Noquieroquetevayas@gmail.com</footer> 
+    
+       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 
 
