--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <title> No quiero que te vaya </title>
  </head>  
    <body>
+    <div>
    <h1>No Quiero Que Te Vayas</h1>
-  
+    </div>
   <div class="container">
     <div class="MAINCONTAINER"></div>
     <div class="HEADER-CONTAINER"></div>
@@ -58,8 +59,7 @@
           </div>
         </nav>
       </div> 
-      
-  </nav>
+      </nav>
   <div class="contenedor">
     <main  class="contenido">
       <h1>Nuestra Misión</h1>
@@ -78,7 +78,6 @@
      <aside>¿Por qué destacamos entre otras organizaciones?: Como supervivientes 
       entregamos una orientación y pensamiento con completa empatía ya que conocemos 
               los pasos y las caídas al momento de la recuperación en primera persona</aside>
-              https://fgarciajulia.github.io/mi_primera_pagina/footer.html#:~:text=%3Cfooter%20class%3D%22text,div%3E%0A%20%20%20%20%3C/div%3E%0A%3C/footer%3E
      
       Nuestras redes de contacto: No quiero que te vayas-facebook-instagram
         Noquieroquetevayas@gmail.com
