--- a/pages/TeAcercamosaLaSolucion.html
+++ b/pages/TeAcercamosaLaSolucion.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="No quiero que te vayas"/>
     <meta name="description" content="pagina de orientacion sobre prevencion
-    del suicidio"/>    
+    del suicidio"/> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Water+Brush&display=swap" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="../css/fondo_menu.css" rel="stylesheet" type="text/css"/>
@@ -14,7 +15,7 @@
    </head>  
    <body id="solucion">
     <header>
-        <h1 >Te acercamos a la solucion</h1> 
+        <h1 class="animate_animated animate__bounceInDown" >Te acercamos a la solucion</h1>
     </header> 
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light">
